--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -37,11 +37,16 @@ body {
 }
 
 h1 {
+    color: #734f96;
     font-weight: bold;
 }
 
 h2 {
     color: #734f96;
+    font-weight: bold;
+}
+
+h3 {
     font-weight: bold;
 }
 
